z-index final fix

--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,7 @@ header {
   justify-content: space-between;
   align-items: center;
   font-size: 25px;
-  z-index: 999999;
+  z-index: 101;
 }
 .header-logo {
   height: 64%;
